# JobHunt

./: .gitignore  LICENSE  Makefile  README.md
services/users/: Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
services/users/docker/: Dockerfile
services/users/docker/commands/: run-backend.sh
services/users/env/: pg.env
services/users/migrations/: env.py
services/users/migrations/versions/: 5a893d946861_user_model.py  fea0b0c38f0a_uuid_type.py
services/users/src/: main.py
services/users/src/api/: __init__.py
services/users/src/api/v1/: __init__.py  auth.py  profiles.py
services/users/src/app/controllers/: __init__.py  user.py
services/users/src/app/exceptions/: __init__.py  user.py
services/users/src/app/models/: user.py
services/users/src/app/repositories/: user.py
services/users/src/app/schemas/core/: users.py
services/users/src/app/schemas/requests/: auth.py
services/users/src/core/: settings.py
services/users/src/core/database/: __init__.py  core.py  session.py
services/users/src/core/dependencies/: __init__.py  authentication.py
services/users/src/core/factory/: base.py
services/users/src/core/handlers/: jwt.py
services/users/src/core/middlewares/: __init__.py  authentication.py
services/users/src/core/types/: __init__.py  uuid.py
services/users/tests/: conftest.py
services/users/tests/fixtures/: client.py  db.py  user.py
services/users/tests/test_controllers/: test_user.py
services/users/tests/test_handlers/: test_password.py
services/users/tests/test_repositories/: test_user.py
services/users/tests/utils/: controllers.py  mocks.py
(+31 files in other folders)
