[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Mohamad Liyaghi <liaghimohamad69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
