[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Mohamad Liyaghi <liaghimohamad69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pytest = "^8.0.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.28"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
black = "^24.2.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
